--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -54,7 +54,7 @@ header h1 {
   margin: 8px;
 }
 
-header p {
+header h2 {
   color: #DFCDBF;
   font-family: "Kalam", "Times New Roman", Serif;
   font-size: 1.7em;
